--- a/prototype/prototype.html
+++ b/prototype/prototype.html
@@ -93,11 +93,7 @@
 		</div>
 	</article>
 	<footer class="main-footer">
-		<div class="main">
-			<div class="footer-logo">
-				<img src="../images/logo-ca-footer.png" />
-			</div>	
-		</div>
+		<img class="logo-footer" src="../images/logo-ca-footer.png" />
 	</footer>
 </body>
 </html>
